Autokey creation on camera's Translate channels #43879

Closed
opened 2015-03-04 04:15:57 +01:00 by Carlos · 5 comments

System Information
Windows 7 quadro k5000

Blender Version
Broken: (example: 2.69.7 4b206af, see splash screen)
Worked: (optional)

Selecting the active camera and looking through it with autokey on and "only insert needed" and "Only insert Available" preferences enabled creates a key for the camera when "lock camera to view" is enabled and you fly around using the middle mouse button. Should not create keys if there are no keyed attributes.

Exact steps for others to reproduce the error

  • open cube.blend file.
  • make sure the "only insert needed" and "Only insert Available" preferences are enabled under the "editing" menu and make sure autokey is turned on in the timeline.
  • use middle mouse button to fly camera around.
  • A key is created for the camera even if there were no previous keyframes on the translate and rotate axis.

cube.blend

**System Information** Windows 7 quadro k5000 **Blender Version** Broken: (example: 2.69.7 4b206af, see splash screen) Worked: (optional) Selecting the active camera and looking through it with autokey on and "only insert needed" and "Only insert Available" preferences enabled creates a key for the camera when "lock camera to view" is enabled and you fly around using the middle mouse button. Should not create keys if there are no keyed attributes. **Exact steps for others to reproduce the error** - open cube.blend file. - make sure the "only insert needed" and "Only insert Available" preferences are enabled under the "editing" menu and make sure autokey is turned on in the timeline. - use middle mouse button to fly camera around. - A key is created for the camera even if there were no previous keyframes on the translate and rotate axis. [cube.blend](https://archive.blender.org/developer/F147158/cube.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @bizdizzle

Added subscriber: @bizdizzle

This issue was referenced by b1e48ab4e4

This issue was referenced by b1e48ab4e483efd5382e5206a2c0177fdf8a7c64

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit b1e48ab4e4.

Closed by commit b1e48ab4e4.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#43879
No description provided.