Fix T43879: Autokey ignore pref /w viewlock-camera